--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -15,3 +15,6 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 board_build.mcu = esp32s2
+lib_deps = 
+	bblanchon/ArduinoJson@^6.17.2
+	knolleary/PubSubClient@^2.8
