--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -15,6 +15,9 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 board_build.mcu = esp32s2
+check_tool = cppcheck
+check_flags = --enable=all --std=c++20
 lib_deps = 
 	bblanchon/ArduinoJson@^6.17.2
 	knolleary/PubSubClient@^2.8
+	claws/BH1750@^1.2.0
