--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -8,16 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
-platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#idf-release/v4.2
+[env:nodemcu-esp32s2-aithinker-esp12k]
 platform = espressif32
-board = nodemcu-32s
+platform_packages = framework-arduinoespressif32 @ https://github.com/letung3105/arduino-esp32.git#idf-release/v4.2
 framework = arduino
-monitor_speed = 115200
+board = nodemcu-32s
 board_build.mcu = esp32s2
-check_tool = cppcheck
-check_flags = --enable=all --std=c++20
-lib_deps = 
+upload_speed = 921600
+monitor_speed = 115200
+lib_deps =
 	bblanchon/ArduinoJson@^6.17.2
 	knolleary/PubSubClient@^2.8
 	claws/BH1750@^1.2.0
