--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -16,7 +16,8 @@ board = nodemcu-32s
 board_build.mcu = esp32s2
 upload_speed = 921600
 monitor_speed = 115200
-lib_deps =
+lib_deps = 
 	bblanchon/ArduinoJson@^6.17.2
 	knolleary/PubSubClient@^2.8
 	claws/BH1750@^1.2.0
+	arkhipenko/TaskScheduler@^3.2.2
