--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -21,3 +21,5 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	claws/BH1750@^1.2.0
 	arkhipenko/TaskScheduler@^3.2.2
+	adafruit/DHT sensor library@^1.4.1
+	adafruit/Adafruit Unified Sensor@^1.1.4
