--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -8,12 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-esp32s2-aithinker-esp12k]
+[env:nodemcu-32s2]
 platform = espressif32
 platform_packages = framework-arduinoespressif32 @ git@github.com:letung3105/arduino-esp32.git#idf-release/v4.2
-framework = arduino
 board = nodemcu-32s
 board_build.mcu = esp32s2
+framework = arduino
+build.flags = -D__HAPPY_HERBS_ESP32S2
+upload_speed = 921600
+monitor_speed = 115200
+lib_deps =
+	bblanchon/ArduinoJson@^6.17.2
+	knolleary/PubSubClient@^2.8
+	claws/BH1750@^1.2.0
+	adafruit/DHT sensor library@^1.4.1
+	adafruit/Adafruit Unified Sensor@^1.1.4
+	arkhipenko/TaskScheduler@^3.2.2
+
+[env:nodemcu-32s]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 lib_deps =
